After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720091 - do not display selinux in preferences if not supported/enabled
do not display selinux in preferences if not supported/enabled
Status: RESOLVED FIXED
Product: system-monitor
Classification: Core
Component: general
git master
Other All
: Normal trivial
: ---
Assigned To: System-monitor maintainers
System-monitor maintainers
Depends on:
Blocks:
 
 
Reported: 2013-12-09 08:48 UTC by Antoine Jacoutot
Modified: 2013-12-09 10:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
check if selinux is enabled before adding the checkbox (1.03 KB, patch)
2013-12-09 08:48 UTC, Antoine Jacoutot
committed Details | Review

Description Antoine Jacoutot 2013-12-09 08:48:23 UTC
Created attachment 263792 [details] [review]
check if selinux is enabled before adding the checkbox

Hi.

The title says it all :-)