preferences: don't display the selinux column if it's not enabled/supported

https://bugzilla.gnome.org/show_bug.cgi?id=720091